--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./person.js"></script> <!-- Sempre priorità a person perchè person ha teacher e student  -->
     <script src="./student.js"></script> <!-- Sempre priorità a student perchè teacher ha student  -->
     <script src="./teacher.js"></script>
     <script src="./oop-1.js"></script>
